# skladi

./: .gitignore  README.md  index.html  pyproject.toml  sources.json
.github/workflows/: deploy-pages.yml  update-data.yml
data/: aggh.csv  ayem.csv  cspx.csv  dbzb.csv  dxeg.csv  euna.csv  eunj.csv  eunl.csv  eunm.csv  exsa.csv  fwia.csv  ibcx.csv  igln.csv  imae.csv  is3n.csv  iuhe.csv  iusn.csv  iusq.csv  iwda.csv  iwmo.csv  iwqu.csv  iwvl.csv  lyp6.csv  lypx.csv  nlb-azija-delniski.csv  nlb-azija-delniski_daily.csv  nlb-dinamicni-razviti-trgi-delniski.csv  nlb-dinamicni-razviti-trgi-delniski_daily.csv  nlb-druzbeno-odgovorni-razviti-trgi-delniski.csv  nlb-druzbeno-odgovorni-razviti-trgi-delniski_daily.csv  nlb-evropa-trgi-v-razvoju-delniski.csv  nlb-evropa-trgi-v-razvoju-delniski_daily.csv  nlb-evropa-uravnotezeni.csv  nlb-evropa-uravnotezeni_daily.csv  nlb-farmacija-in-zdravstvo-delniski.csv  nlb-farmacija-in-zdravstvo-delniski_daily.csv  nlb-globalni-delniski.csv  nlb-globalni-delniski_daily.csv  nlb-globalni-uravnotezeni.csv  nlb-globalni-uravnotezeni_daily.csv  (+50 more)
extractors/: extractory.py
src/nlbapi/: __init__.py  client.py
